@@ -10275,6 +10275,9 @@ of $\zeta(aj + b)$, $j = 0, 1, \dots, N-1$, where $a$ and $b$ are real
 numbers (of arbitrary type, although \typ{INT} is treated more efficiently)
 and $b > 1$.
 
+\fun{GEN}{ggamma1m1}{GEN x, long prec} return $\Gamma(1+x) - 1$ assuming
+$|x| < 1$. Guard against cancellation when $x$ is small.
+
 \noindent A few variants on sin and cos:
 
 \fun{void}{mpsincos}{GEN x, GEN *s, GEN *c} sets $s$ and $c$ to
